ODIN_II/ODIN_II/SRC/verilog_bison.output
Terminals which are not used

   vDEFPARAM
   vNOT_SUPPORT


State 199 conflicts: 1 shift/reduce


Grammar

    0 $accept: source_text $end

    1 source_text: items

    2 items: items module
    3      | items define
    4      | module
    5      | define

    6 define: vDEFINE vSYMBOL_ID vNUMBER_ID

    7 module: vMODULE vSYMBOL_ID '(' variable_list ')' ';' list_of_module_items vENDMODULE
    8       | vMODULE vSYMBOL_ID '(' variable_list ',' ')' ';' list_of_module_items vENDMODULE
    9       | vMODULE vSYMBOL_ID '(' ')' ';' list_of_module_items vENDMODULE

   10 list_of_module_items: list_of_module_items module_item
   11                     | module_item

   12 module_item: parameter_declaration
   13            | input_declaration
   14            | output_declaration
   15            | inout_declaration
   16            | net_declaration
   17            | continuous_assign
   18            | gate_declaration
   19            | module_instantiation
   20            | always

   21 parameter_declaration: vPARAMETER variable_list ';'

   22 input_declaration: vINPUT variable_list ';'

   23 output_declaration: vOUTPUT variable_list ';'

   24 inout_declaration: vINOUT variable_list ';'

   25 net_declaration: vWIRE variable_list ';'
   26                | vREG variable_list ';'

   27 variable_list: variable_list ',' variable
   28              | variable

   29 variable: vSYMBOL_ID
   30         | '[' expression ':' expression ']' vSYMBOL_ID
   31         | '[' expression ':' expression ']' vSYMBOL_ID '[' expression ':' expression ']'
   32         | '[' expression ':' expression ']' vSYMBOL_ID '=' primary
   33         | vSYMBOL_ID '=' primary

   34 continuous_assign: vASSIGN blocking_assignment ';'

   35 gate_declaration: vAND gate_instance ';'
   36                 | vNAND gate_instance ';'
   37                 | vNOR gate_instance ';'
   38                 | vNOT gate_instance ';'
   39                 | vOR gate_instance ';'
   40                 | vXNOR gate_instance ';'
   41                 | vXOR gate_instance ';'

   42 gate_instance: vSYMBOL_ID '(' expression ',' expression ',' expression ')'
   43              | '(' expression ',' expression ',' expression ')'
   44              | vSYMBOL_ID '(' expression ',' expression ')'
   45              | '(' expression ',' expression ')'

   46 module_instantiation: vSYMBOL_ID module_instance

   47 module_instance: vSYMBOL_ID '(' list_of_module_connections ')' ';'
   48                | '#' '(' list_of_module_parameters ')' vSYMBOL_ID '(' list_of_module_connections ')' ';'
   49                | vSYMBOL_ID '(' ')' ';'
   50                | '#' '(' list_of_module_parameters ')' vSYMBOL_ID '(' ')' ';'

   51 list_of_module_connections: list_of_module_connections ',' module_connection
   52                           | module_connection

   53 module_connection: '.' vSYMBOL_ID '(' expression ')'
   54                  | expression

   55 list_of_module_parameters: list_of_module_parameters ',' module_parameter
   56                          | module_parameter

   57 module_parameter: '.' vSYMBOL_ID '(' expression ')'
   58                 | expression

   59 always: vALWAYS delay_control statement

   60 statement: seq_block
   61          | blocking_assignment ';'
   62          | non_blocking_assignment ';'
   63          | vIF '(' expression ')' statement
   64          | vIF '(' expression ')' statement vELSE statement
   65          | vCASE '(' expression ')' case_item_list vENDCASE
   66          | ';'

   67 blocking_assignment: primary '=' expression
   68                    | primary '=' vDELAY_ID expression

   69 non_blocking_assignment: primary voLTE expression
   70                        | primary voLTE vDELAY_ID expression

   71 case_item_list: case_item_list case_items
   72               | case_items

   73 case_items: expression ':' statement
   74           | vDEFAULT ':' statement

   75 seq_block: vBEGIN stmt_list vEND

   76 stmt_list: stmt_list statement
   77          | statement

   78 delay_control: '@' '(' event_expression_list ')'

   79 event_expression_list: event_expression_list vOR event_expression
   80                      | event_expression

   81 event_expression: primary
   82                 | vPOSEDGE vSYMBOL_ID
   83                 | vNEGEDGE vSYMBOL_ID

   84 expression: primary
   85           | '+' expression
   86           | '-' expression
   87           | '~' expression
   88           | '&' expression
   89           | '|' expression
   90           | voNAND expression
   91           | voNOR expression
   92           | voXNOR expression
   93           | '!' expression
   94           | '^' expression
   95           | expression '^' expression
   96           | expression '*' expression
   97           | expression '/' expression
   98           | expression '%' expression
   99           | expression '+' expression
  100           | expression '-' expression
  101           | expression '&' expression
  102           | expression '|' expression
  103           | expression voNAND expression
  104           | expression voNOR expression
  105           | expression voXNOR expression
  106           | expression '<' expression
  107           | expression '>' expression
  108           | expression voSRIGHT expression
  109           | expression voSLEFT expression
  110           | expression voEQUAL expression
  111           | expression voNOTEQUAL expression
  112           | expression voLTE expression
  113           | expression voGTE expression
  114           | expression voCASEEQUAL expression
  115           | expression voCASENOTEQUAL expression
  116           | expression voOROR expression
  117           | expression voANDAND expression
  118           | expression '?' expression ':' expression
  119           | '(' expression ')'
  120           | '{' expression '{' expression '}' '}'
  121           | '{' expression '{' expression_list '}' '}'

  122 primary: vNUMBER_ID
  123        | vSYMBOL_ID
  124        | vSYMBOL_ID '[' expression ']'
  125        | vSYMBOL_ID '[' expression ':' expression ']'
  126        | '{' expression_list '}'

  127 expression_list: expression_list ',' expression
  128                | expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 93
'#' (35) 48 50
'%' (37) 98
'&' (38) 88 101
'(' (40) 7 8 9 42 43 44 45 47 48 49 50 53 57 63 64 65 78 119
')' (41) 7 8 9 42 43 44 45 47 48 49 50 53 57 63 64 65 78 119
'*' (42) 96
'+' (43) 85 99
',' (44) 8 27 42 43 44 45 51 55 127
'-' (45) 86 100
'.' (46) 53 57
'/' (47) 97
':' (58) 30 31 32 73 74 118 125
';' (59) 7 8 9 21 22 23 24 25 26 34 35 36 37 38 39 40 41 47 48 49 50
    61 62 66
'<' (60) 106
'=' (61) 32 33 67 68
'>' (62) 107
'?' (63) 118
'@' (64) 78
'[' (91) 30 31 32 124 125
']' (93) 30 31 32 124 125
'^' (94) 94 95
'{' (123) 120 121 126
'|' (124) 89 102
'}' (125) 120 121 126
'~' (126) 87
error (256)
vSYMBOL_ID (258) 6 7 8 9 29 30 31 32 33 42 44 46 47 48 49 50 53 57
    82 83 123 124 125
vNUMBER_ID (259) 6 122
vDELAY_ID (260) 68 70
vALWAYS (261) 59
vAND (262) 35
vASSIGN (263) 34
vBEGIN (264) 75
vCASE (265) 65
vDEFAULT (266) 74
vDEFINE (267) 6
vELSE (268) 64
vEND (269) 75
vENDCASE (270) 65
vENDMODULE (271) 7 8 9
vIF (272) 63 64
vINOUT (273) 24
vINPUT (274) 22
vMODULE (275) 7 8 9
vNAND (276) 36
vNEGEDGE (277) 83
vNOR (278) 37
vNOT (279) 38
vOR (280) 39 79
vOUTPUT (281) 23
vPARAMETER (282) 21
vPOSEDGE (283) 82
vREG (284) 26
vWIRE (285) 25
vXNOR (286) 40
vXOR (287) 41
vDEFPARAM (288)
voANDAND (289) 117
voOROR (290) 116
voLTE (291) 69 70 112
voGTE (292) 113
voSLEFT (293) 109
voSRIGHT (294) 108
voEQUAL (295) 110
voNOTEQUAL (296) 111
voCASEEQUAL (297) 114
voCASENOTEQUAL (298) 115
voXNOR (299) 92 105
voNAND (300) 90 103
voNOR (301) 91 104
vNOT_SUPPORT (302)
LOWER_THAN_ELSE (303)


Nonterminals, with rules where they appear

$accept (75)
    on left: 0
source_text (76)
    on left: 1, on right: 0
items (77)
    on left: 2 3 4 5, on right: 1 2 3
define (78)
    on left: 6, on right: 3 5
module (79)
    on left: 7 8 9, on right: 2 4
list_of_module_items (80)
    on left: 10 11, on right: 7 8 9 10
module_item (81)
    on left: 12 13 14 15 16 17 18 19 20, on right: 10 11
parameter_declaration (82)
    on left: 21, on right: 12
input_declaration (83)
    on left: 22, on right: 13
output_declaration (84)
    on left: 23, on right: 14
inout_declaration (85)
    on left: 24, on right: 15
net_declaration (86)
    on left: 25 26, on right: 16
variable_list (87)
    on left: 27 28, on right: 7 8 21 22 23 24 25 26 27
variable (88)
    on left: 29 30 31 32 33, on right: 27 28
continuous_assign (89)
    on left: 34, on right: 17
gate_declaration (90)
    on left: 35 36 37 38 39 40 41, on right: 18
gate_instance (91)
    on left: 42 43 44 45, on right: 35 36 37 38 39 40 41
module_instantiation (92)
    on left: 46, on right: 19
module_instance (93)
    on left: 47 48 49 50, on right: 46
list_of_module_connections (94)
    on left: 51 52, on right: 47 48 51
module_connection (95)
    on left: 53 54, on right: 51 52
list_of_module_parameters (96)
    on left: 55 56, on right: 48 50 55
module_parameter (97)
    on left: 57 58, on right: 55 56
always (98)
    on left: 59, on right: 20
statement (99)
    on left: 60 61 62 63 64 65 66, on right: 59 63 64 73 74 76 77
blocking_assignment (100)
    on left: 67 68, on right: 34 61
non_blocking_assignment (101)
    on left: 69 70, on right: 62
case_item_list (102)
    on left: 71 72, on right: 65 71
case_items (103)
    on left: 73 74, on right: 71 72
seq_block (104)
    on left: 75, on right: 60
stmt_list (105)
    on left: 76 77, on right: 75 76
delay_control (106)
    on left: 78, on right: 59
event_expression_list (107)
    on left: 79 80, on right: 78 79
event_expression (108)
    on left: 81 82 83, on right: 79 80
expression (109)
    on left: 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101
    102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117
    118 119 120 121, on right: 30 31 32 42 43 44 45 53 54 57 58 63
    64 65 67 68 69 70 73 85 86 87 88 89 90 91 92 93 94 95 96 97 98
    99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114
    115 116 117 118 119 120 121 124 125 127 128
primary (110)
    on left: 122 123 124 125 126, on right: 32 33 67 68 69 70 81 84
expression_list (111)
    on left: 127 128, on right: 121 126 127


state 0

    0 $accept: . source_text $end

    vDEFINE  shift, and go to state 1
    vMODULE  shift, and go to state 2

    source_text  go to state 3
    items        go to state 4
    define       go to state 5
    module       go to state 6


state 1

    6 define: vDEFINE . vSYMBOL_ID vNUMBER_ID

    vSYMBOL_ID  shift, and go to state 7


state 2

    7 module: vMODULE . vSYMBOL_ID '(' variable_list ')' ';' list_of_module_items vENDMODULE
    8       | vMODULE . vSYMBOL_ID '(' variable_list ',' ')' ';' list_of_module_items vENDMODULE
    9       | vMODULE . vSYMBOL_ID '(' ')' ';' list_of_module_items vENDMODULE

    vSYMBOL_ID  shift, and go to state 8


state 3

    0 $accept: source_text . $end

    $end  shift, and go to state 9


state 4

    1 source_text: items .
    2 items: items . module
    3      | items . define

    vDEFINE  shift, and go to state 1
    vMODULE  shift, and go to state 2

    $default  reduce using rule 1 (source_text)

    define  go to state 10
    module  go to state 11


state 5

    5 items: define .

    $default  reduce using rule 5 (items)


state 6

    4 items: module .

    $default  reduce using rule 4 (items)


state 7

    6 define: vDEFINE vSYMBOL_ID . vNUMBER_ID

    vNUMBER_ID  shift, and go to state 12


state 8

    7 module: vMODULE vSYMBOL_ID . '(' variable_list ')' ';' list_of_module_items vENDMODULE
    8       | vMODULE vSYMBOL_ID . '(' variable_list ',' ')' ';' list_of_module_items vENDMODULE
    9       | vMODULE vSYMBOL_ID . '(' ')' ';' list_of_module_items vENDMODULE

    '('  shift, and go to state 13


state 9

    0 $accept: source_text $end .

    $default  accept


state 10

    3 items: items define .

    $default  reduce using rule 3 (items)


state 11

    2 items: items module .

    $default  reduce using rule 2 (items)


state 12

    6 define: vDEFINE vSYMBOL_ID vNUMBER_ID .

    $default  reduce using rule 6 (define)


state 13

    7 module: vMODULE vSYMBOL_ID '(' . variable_list ')' ';' list_of_module_items vENDMODULE
    8       | vMODULE vSYMBOL_ID '(' . variable_list ',' ')' ';' list_of_module_items vENDMODULE
    9       | vMODULE vSYMBOL_ID '(' . ')' ';' list_of_module_items vENDMODULE

    vSYMBOL_ID  shift, and go to state 14
    ')'         shift, and go to state 15
    '['         shift, and go to state 16

    variable_list  go to state 17
    variable       go to state 18


state 14

   29 variable: vSYMBOL_ID .
   33         | vSYMBOL_ID . '=' primary

    '='  shift, and go to state 19

    $default  reduce using rule 29 (variable)


state 15

    9 module: vMODULE vSYMBOL_ID '(' ')' . ';' list_of_module_items vENDMODULE

    ';'  shift, and go to state 20


state 16

   30 variable: '[' . expression ':' expression ']' vSYMBOL_ID
   31         | '[' . expression ':' expression ']' vSYMBOL_ID '[' expression ':' expression ']'
   32         | '[' . expression ':' expression ']' vSYMBOL_ID '=' primary

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression  go to state 35
    primary     go to state 36


state 17

    7 module: vMODULE vSYMBOL_ID '(' variable_list . ')' ';' list_of_module_items vENDMODULE
    8       | vMODULE vSYMBOL_ID '(' variable_list . ',' ')' ';' list_of_module_items vENDMODULE
   27 variable_list: variable_list . ',' variable

    ')'  shift, and go to state 37
    ','  shift, and go to state 38


state 18

   28 variable_list: variable .

    $default  reduce using rule 28 (variable_list)


state 19

   33 variable: vSYMBOL_ID '=' . primary

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    '{'         shift, and go to state 39

    primary  go to state 40


state 20

    9 module: vMODULE vSYMBOL_ID '(' ')' ';' . list_of_module_items vENDMODULE

    vSYMBOL_ID  shift, and go to state 41
    vALWAYS     shift, and go to state 42
    vAND        shift, and go to state 43
    vASSIGN     shift, and go to state 44
    vINOUT      shift, and go to state 45
    vINPUT      shift, and go to state 46
    vNAND       shift, and go to state 47
    vNOR        shift, and go to state 48
    vNOT        shift, and go to state 49
    vOR         shift, and go to state 50
    vOUTPUT     shift, and go to state 51
    vPARAMETER  shift, and go to state 52
    vREG        shift, and go to state 53
    vWIRE       shift, and go to state 54
    vXNOR       shift, and go to state 55
    vXOR        shift, and go to state 56

    list_of_module_items   go to state 57
    module_item            go to state 58
    parameter_declaration  go to state 59
    input_declaration      go to state 60
    output_declaration     go to state 61
    inout_declaration      go to state 62
    net_declaration        go to state 63
    continuous_assign      go to state 64
    gate_declaration       go to state 65
    module_instantiation   go to state 66
    always                 go to state 67


state 21

  123 primary: vSYMBOL_ID .
  124        | vSYMBOL_ID . '[' expression ']'
  125        | vSYMBOL_ID . '[' expression ':' expression ']'

    '['  shift, and go to state 68

    $default  reduce using rule 123 (primary)


state 22

  122 primary: vNUMBER_ID .

    $default  reduce using rule 122 (primary)


state 23

   92 expression: voXNOR . expression

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression  go to state 69
    primary     go to state 36


state 24

   90 expression: voNAND . expression
